--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "ejs": "^2.5.7",
     "express": "^4.16.2",
-    "nodemon": "^1.12.5"
+    "nodemon": "^1.12.5",
+    "mysql": "^2.15.0"
   }
 }
