created socket.io and succesfull info transfer every 1sec

--- a/package.json
+++ b/package.json
@@ -20,9 +20,14 @@
     "cors": "^2.8.4",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
+    "jquery": "^3.2.1",
     "mysql": "^2.15.0",
     "nodemon": "^1.12.5",
+    "now": "^9.0.1",
+    "os": "^0.1.1",
+    "os-utils": "0.0.14",
     "popper.js": "^1.13.0",
+    "socket.io": "^2.0.4",
     "webpack": "^2.7.0"
   }
 }
