--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.4",
+    "diskusage": "^0.2.4",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "jquery": "^3.2.1",
